reset password by email

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -34,7 +34,7 @@
         Don't have an account? <a href="{% url 'register' %}">Sign Up</a>
       </p>
       <p class="text-center mt-3">
-        <a href="{% url 'password_change' %}">Forgot Password?</a>
+        <a href="{% url 'password_reset' %}">Forgot Password?</a>
       </p>
     </div>
   </div>
