--- a/static/css/base.css
+++ b/static/css/base.css
@@ -112,3 +112,126 @@ main {
     margin-left: 8px; /* Add spacing between the icon and the count */
     font-size: 0.8em; /* Adjust the size of the like count */
 }
+
+
+/* ---------------posts */
+.post-card {
+    border: 1px solid #444;
+    margin-bottom: 20px;
+    background: #1a1a1a;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.post-header {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #1a1a1a;
+}
+
+.profile-picture {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    border: 2px solid #444;
+}
+
+.username {
+    font-weight: bold;
+    color: #f5f5f5;
+    flex-grow: 1;
+}
+
+.post-options {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.btn-options {
+    background: none;
+    border: none;
+    color: #f5f5f5;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.post-options-modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #1a1a1a;
+    padding: 20px;
+    border: 1px solid #444;
+    border-radius: 10px;
+    z-index: 1000;
+}
+
+.modal-content {
+    text-align: center;
+}
+
+.btn-delete {
+    background: #ff4d4d;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-delete:hover {
+    background: #cc0000;
+}
+
+.post-image {
+    background-color: #000;
+    text-align: center;
+}
+
+.post-img {
+    max-width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: contain;
+}
+
+.post-actions {
+    padding: 10px;
+    background-color: #1a1a1a;
+}
+
+.like-button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 1.5em;
+    color: #ccc;
+}
+
+.like-button.liked {
+    color: #007bff;
+}
+
+.post-caption {
+    padding: 10px;
+    background-color: #1a1a1a;
+    color: #f5f5f5;
+}
+
+.comments {
+    padding: 10px;
+    border-top: 1px solid #444;
+    background-color: #1a1a1a;
+    color: #f5f5f5;
+}
+
+
