--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,17 @@ body {
     background-color: #121212; /* Dark background */
     color: #e0e0e0; /* Light text color */
 }
+
+/* .container {
+    width: 100%;
+    height: 100%;
+    --color: rgba(114, 114, 114, 0.3);
+    background-color: #191a1a;
+    background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
+        linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
+    background-size: 55px 55px;
+  } */
+
 header {
     background-color: #1f1f1f; /* Dark header background */
     padding: 1rem 0;
@@ -235,3 +246,158 @@ main {
 }
 
 
+/* comments */
+
+/* Comments Section */
+.comments {
+    margin-top: 10px;
+    padding: 15px;
+    border-top: 1px solid #1a1a1a;
+}
+
+.comment-form {
+    margin-bottom: 20px;
+}
+
+.comment-form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #1a1a1a;
+    border-radius: 5px;
+    resize: none;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.comment-form button {
+    background-color: #0095f6;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.comment-form button:hover {
+    background-color: #0077cc;
+}
+
+.comment-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.comment-item {
+    margin-bottom: 5px;
+    padding: 10px;
+    background-color: #1a1a1a;
+    border-radius: 5px;
+    border: 1px solid #1a1a1a;
+}
+
+.comment-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.comment-username {
+    font-weight: bold;
+    color: #e0e0e0;
+}
+
+.comment-date {
+    margin-left: 15px;
+    font-size: 12px;
+    color: #8e8e8e;
+}
+
+.comment-content {
+    margin: 0;
+    font-size: 14px;
+    color: #e0e0e0;
+}
+
+.no-comments {
+    text-align: center;
+    color: #8e8e8e;
+    font-size: 14px;
+}
+
+.profile-picture {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    border: 2px solid #444;
+}
+
+
+.view-more-comments {
+    margin-bottom: 5px;
+    margin-left: 10px;
+}
+
+.view-more-comments a {
+    color: #8e8e8e;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.view-more-comments a:hover {
+    color: #262626;
+}
+
+
+.post-options-modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Style for the delete button */
+.btn-delete {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-delete:hover {
+    background-color: #ff1a1a;
+}
+
+/* profile */
+.card {
+    background-color: #222;
+    border: 1px solid #444;
+}
+
+.card-img-top {
+    border-bottom: 1px solid #444;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-success {
+    background-color: #28a745;
+    border-color: #28a745;
+}
+
+.btn-primary:hover, .btn-success:hover {
+    opacity: 0.8;
+}
