--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav class="container">
-            <a href="/">Home</a>
+            <a href="{% url 'home' %}">Home</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}">Logout</a>
             {% else %}
